--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "patch-package": "^6.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-https-redirect": "1.1.0",
     "react-i18next": "^11.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
